fixed bug with disappearing main vertical scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
 body {
   font-family: "Andada Pro", serif;
   background-color: $ContentBackgroundColor;
+  overflow-y: scroll;
 }
 
 .inputWrapper {
